# cautious-sniffle

./: .env.example  .gitignore  README.md  chatcraft-professional-description.txt  chatcraft-professional-standalone-spec.md  docker-compose.services.yml  docker-compose.yml  pom.xml  setup-python.md
audit-service/: Dockerfile  requirements.txt
audit-service/app/: config.py  database.py  dependencies.py  main.py
authorization-service/: Dockerfile  pom.xml
authorization-service/scripts/: generate-keystore.sh
chatcraft-common/: pyproject.toml
chatcraft-common/chatcraft_common/: __init__.py  auth.py  clients.py  database.py  errors.py  health.py  pagination.py  settings.py
db/init/: 00-create-databases.sql  01-extensions.sql
document-service/: Dockerfile  alembic.ini  requirements.txt
document-service/alembic/: env.py
document-service/app/: __init__.py  config.py  dependencies.py  main.py
export-service/: Dockerfile  requirements.txt
export-service/app/: config.py  dependencies.py  main.py
gateway-service/: Dockerfile  pom.xml
ingestion-service/: Dockerfile  requirements.txt
ingestion-service/app/: __init__.py  config.py  main.py  worker.py
notification-service/: Dockerfile  alembic.ini  requirements.txt
notification-service/alembic/: env.py
notification-service/app/: config.py  dependencies.py  main.py
organization-service/: Dockerfile  alembic.ini  requirements.txt
organization-service/alembic/: env.py
query-service/: Dockerfile  requirements.txt
workspace-service/: Dockerfile  alembic.ini  requirements.txt
(+165 files in other folders)
